hphp/hack/test/typecheck/dynamic/coercion/awaitable_non_async.php.like_types.exp
File "awaitable_non_async.php", line 5, characters 10-11:
Invalid return type (Typing[4110])
File "awaitable_non_async.php", line 4, characters 32-49:
Expected Awaitable<dynamic>
File "awaitable_non_async.php", line 4, characters 12-25:
But got dynamic because it is an unenforceable type
